--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,21 @@ body {
   color: var(--accent-color);
 }
 
+.current {
+  position: relative;
+}
+
+.current::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+}
+
 .adrress-header {
   display: flex;
   margin-left: auto;
