--- a/css/styles.css
+++ b/css/styles.css
@@ -300,6 +300,29 @@ body {
   margin-right: 30px;
 }
 
+.our-work-thumb {
+  position: relative;
+}
+
+.our-work-sub-title {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  left: 0;
+
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--title-bg-color);
+}
+
 /* ---------team--------- */
 
 .team {
@@ -387,6 +410,7 @@ body {
   justify-content: center;
   width: 100%;
   height: 100%;
+  transition: background-color 250ms var(--function-cubic), color 250ms var(--function-cubic);
 
   background-color: var(--title-bg-color);
   color: var(--logo-color);
@@ -438,6 +462,7 @@ body {
   justify-content: center;
   width: 100%;
   height: 100%;
+  transition: color 250ms var(--function-cubic), border 250ms var(--function-cubic);
 
   outline: transparent;
   color: var(--logo-color);
@@ -498,6 +523,10 @@ body {
   letter-spacing: 0.03em;
 }
 
+.contacts .link {
+  transition: color 250ms var(--function-cubic);
+}
+
 .contacts .link:hover,
 .contacts .link:focus {
   color: var(--accent-color);
@@ -542,9 +571,11 @@ body {
   justify-content: center;
   width: 100%;
   height: 100%;
-  border-radius: 50%;
+  transition: background-color 250ms var(--function-cubic);
+
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--title-bg-color);
+  border-radius: 50%;
 }
 
 .social-icon {
